--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.example</groupId>
     <artifactId>Student</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>student.Student</name>
+    <name>mvcstudent.Student</name>
     <packaging>war</packaging>
 
     <properties>
